hphp/test/slow/using/bad-function1.php.expectf
Fatal error: syntax error, unexpected T_VARIABLE, expecting '(' in %s/test/slow/using/bad-function1.php on line 3